fixed background issue on mobile. edited 1 animation

--- a/css/style.scss
+++ b/css/style.scss
@@ -28,14 +28,24 @@ body {
 
   background: url(../images/websitebg.png);
 
-  background-position: center;
-  background-attachment: fixed;       
-  webkit-background-size: cover;
+  line-height: 2em;
+}
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(../images/websitebg.png) no-repeat center center;
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
-  line-height: 2em;
+  height: 100vh;
 }
 
 .main-logo {
